# alita-stuff

./: .gitignore
countdown/: index.html
home-release-countdown/: index.html  script.js  styles.css
ranker/: alita_ranker_stats.py
ranker-page/: index.html  script.js  styles.css
ranker/page/: index.html  script.js
ranker/statistics/: compress.py  fetch.py
ranker/stats/: .gitignore  compress.py  fetch.py  reddit.py
ranker/stats/backend/: .gitignore  Cargo.toml  config.example.json
ranker/stats/backend/src/: config.rs  database.rs  main.rs  record.rs  server.rs  shutdown.rs  tracker.rs
ranker/stats/backend/src/trackers/: mod.rs  reddit.rs
website-backend/: .eslintrc.yaml  .gitignore  config.example.json  package.json
website-backend/src/: PushDatabase.js  config.rs  database.js  database.rs  http.rs  logger.js  main.js  main.rs  server.js  shutdown.rs  trackers.js
website-backend/src/trackers/: mod.rs  ranker.js  ranker.rs  reddit.js
website-backend/src/utils/: fileMode.js  mkdirParents.js  typeCheck.js
