[package]
name = "backend"
version = "0.1.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
tokio = "*"
futures = "*"
time = "0.1"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
# csv = "*"

hyper = "0.12"
# hyper-tls = "*"
iron = { git = "https://github.com/iron/iron", branch = "master" }
persistent = { git = "https://github.com/iron/persistent", branch = "master" }
