[package]
name = "backend"
version = "0.1.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "*"
itoa = "*"
time = "0.1"
tokio = "*"

log = "*"
env_logger = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

hyper = "0.12"
# hyper-tls = "*"
